# ai-backtest-platform

./: .env.example  .env.extreme  .gitignore  README.md  RUST_SETUP.md  SERVER_SETUP.md  WINDOWS_SETUP.md  benchmark_ai_agent.py  build_rust.sh  docker-compose.mac-mini.yml  docker-compose.optimized.yml  docker-compose.yml  download_binance_data.py  profile_test.py  quick_test.py  requirements.txt  test_ai_speed.py  test_grid.json  test_rust_engine.py  test_single_backtest.py  test_strategy.json  your_config.json
.git_backup/: COMMIT_EDITMSG  config  index
.git_backup/logs/: HEAD
api/: server.js
backend/: .dockerignore  .env.example  .env.optimized  Dockerfile  requirements.txt
backend/app/: main.py
backend/engine/: __init__.py  ai_agent.py  ai_agent_fast.py  auto_tuner.py  backtest_engine.py  brain_score.py  chart_data.py  coherence_validator.py  data_loader.py  download_data.py  filtering.py  genome_optimizer.py  genome_optimizer_v2.py  hardware_config.py  indicator_cache.py  indicators.py  intelligent_sampling.py  market_profile_v2.py  (+18 more)
engine/: ai_agent.py  ai_agent_fast.py  backtest_engine.py  chart_data.py  filtering.py  grid.py  guards.py  metrics.py  multi_runner.py  optimize_ema.py  optimizer.py  run_builder.py  run_optimizer.py  rust_bridge.py  tf_agreement.py
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  vite.config.js
optimizer-dashboard/: package-lock.json  package.json
rust_engine/: Cargo.toml  pyproject.toml
rust_engine/src/: engine.rs  indicators.rs  lib.rs  strategies.rs
scripts/: deploy-optimized.sh
(+57 files in other folders)
