[package]
name = "backtest_engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "backtest_engine"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
numpy = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.8"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
